@@ -6,9 +6,6 @@ in the callback) and main notebook switch callback;
 22) Convert ESD driver into the modern Pulseaudio API.
 36) Pressing Ctrl-O in Instrument editor crashes ST at some machines;
 49) JACK driver master mode;
-54) Using discretization frequency > 64 kHz gives wrong notes (pitch is 2 times higher, independent on
-the discretization frequency). It is a mixer bug, file output does the same. This bus appears with
-asm/C/integer mixers, so it might be coming from somewhere else;
 55) Cleanup sun audio driver;
 58) Check (wet.xm) why after opening original ft2 xm and saving it as is some fields in the instrument
 header are different;
